# ai-rolling-demo-gitops

./: .gitignore  .shellcheckrc  Makefile  README.md  setup.sh
.github/workflows/: nightly.yml  plugins-updater.yaml  shellcheck.yaml
charts/rhdh/: Chart.yaml  values.yaml
charts/rhdh/charts/: backstage-3.1.1.tgz  backstage-5.0.2.tgz
charts/rhdh/templates/: lightspeed-postgres.yaml  lightspeed-stack-config.yaml  llama-stack-config.yaml  llama-stack-run-no-guard-config.yaml  model-catalog-rbac.yaml  model-catalog-secret.yaml  rhdh-profile-config.yaml  rolling-demo-cleanup-job.yaml  rolling-demo-rbac.yaml  rolling-demo-sidecars-job.yaml  rsconfig.yaml
charts/templates/: model-catalog-rbac.yaml  model-catalog-secret.yaml
docs/: SETUP_GUIDE.md  TESTING.md
gitops/: application.yaml
scripts/: apply-argocd-application.sh  common.sh  configure-pipelines.sh  env  install-operators.sh  logging.sh  prepare-rolling-demo.sh  run-tests.sh  setup-argocd.sh  setup-namespaces.sh  setup-pipelines.sh  setup-rhoai.sh  setup-sa-tokens.sh  setup-secrets.sh  setup.sh
tests/: README.md  conftest.py  pyproject.toml  test_extensions.py  test_lightspeed.py  test_login.py  test_navbar.py  test_sidebar.py
tests/pages/: base_page.py  extensions_page.py  lightspeed_page.py  login_page.py  nav_bar.py  sidebar.py
