[project]
name = "ai-rolling-demo-tests"
version = "0.1.0"
description = "Playwright UI tests for AI Rolling Demo"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pytest-playwright>=0.5",
    "pytest>=8.0",
    "pyotp>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "smoke: quick sanity checks that do not require authentication",
    "auth_required: tests that require a logged-in session",
]
